[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
zeitgeist-primitives = { workspace = true }

# mock

env_logger = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }

# fuzz

arbitrary = { workspace = true, features = ["derive"], optional = true }
sp-core = { workspace = true, optional = true }

[dev-dependencies]
test-case = { workspace = true }
zrml-futarchy = { workspace = true, features = ["default", "mock"] }

[features]
default = ["std"]
fuzzing = ["arbitrary", "sp-core"]
mock = [
    "env_logger/default",
    "sp-io/default",
    "pallet-balances/default",
    "zeitgeist-primitives/mock",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition.workspace = true
name = "zrml-futarchy"
version = "0.5.5"
