[dependencies]
frame-benchmarking = { branch = "polkadot-v0.9.32", default-features = false, optional = true, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
zrml-market-commons = { default-features = false, path = "../market-commons" }

# Benchmark
num-traits = { version = "0.2.15", default-features = false, optional = true }


[dev-dependencies]
pallet-balances = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
zeitgeist-primitives = { default-features = false, features = ["mock"], path = "../../primitives" }

test-case = "2.0.2"

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "num-traits",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-global-disputes"
version = "0.3.8"
