[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
orml-traits = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
zeitgeist-primitives = { workspace = true }
zrml-market-commons = { workspace = true }


orml-asset-registry = { workspace = true, optional = true }
orml-currencies = { workspace = true, optional = true }
orml-tokens = { workspace = true, optional = true }
pallet-assets = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-randomness-collective-flip = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
pallet-treasury = { workspace = true, optional = true }
pallet-xcm = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
xcm = { workspace = true, optional = true }
xcm-builder = { workspace = true, optional = true }
zrml-asset-router = { workspace = true, optional = true }
zrml-authorized = { workspace = true, optional = true }
zrml-court = { workspace = true, optional = true }
zrml-global-disputes = { workspace = true, optional = true }
zrml-liquidity-mining = { workspace = true, optional = true }
zrml-neo-swaps = { workspace = true, optional = true }
zrml-orderbook = { workspace = true, optional = true }
zrml-prediction-markets = { workspace = true, optional = true }
zrml-simple-disputes = { workspace = true, optional = true }

[dev-dependencies]
env_logger = { workspace = true }
test-case = { workspace = true }
zrml-hybrid-router = { workspace = true, features = ["mock"] }

[features]
default = ["std"]
mock = [
    "orml-asset-registry/default",
    "orml-currencies/default",
    "orml-tokens/default",
    "pallet-assets/default",
    "pallet-balances/default",
    "pallet-randomness-collective-flip/default",
    "pallet-timestamp/default",
    "pallet-treasury/default",
    "pallet-xcm/default",
    "serde/default",
    "sp-io/default",
    "xcm/default",
    "zeitgeist-primitives/mock",
    "zrml-asset-router/default",
    "zrml-market-commons/default",
    "zrml-neo-swaps/default",
    "zrml-orderbook/default",
    "zrml-prediction-markets/default",
    "zrml-prediction-markets/mock",
    "zrml-simple-disputes/default",
    "zrml-authorized/default",
    "zrml-court/default",
    "zrml-global-disputes/default",
    "zrml-liquidity-mining/default",
]
parachain = [
    "zrml-prediction-markets/parachain",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "pallet-assets?/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "zrml-prediction-markets/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "xcm-builder/std",
    "pallet-xcm/std",
    "zeitgeist-primitives/std",
    "zrml-market-commons/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-hybrid-router"
version = "0.5.1"
