[dependencies]
frame-support = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { default-features = false, features = ["derive"], version = "2.0" }
sp-runtime = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.4", default-features = false, git = "https://github.com/paritytech/substrate" }
substrate-fixed = { default-features = false, features = ["serde"], git = "https://github.com/encointer/substrate-fixed", package = "substrate-fixed" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
pallet-balances = { branch = "polkadot-v0.9.4", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.4", git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.4", git = "https://github.com/paritytech/substrate" }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "substrate-fixed/std",
    "zeitgeist-primitives/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2018"
name = "lsd-lmsr"
version = "0.1.0"
