[dependencies]
frame-support = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { default-features = false, features = ["derive"], version = "2.0" }
serde = { features = ["derive"], version = "1.0.102", optional = true }
sp-runtime = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate" }
substrate-fixed = { default-features = false, features = ["serde"], git = "https://github.com/encointer/substrate-fixed", package = "substrate-fixed" }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "substrate-fixed/std"
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2018"
name = "lsd-lsmr"
version = "0.1.0"
