[dependencies]
cfg-if = { workspace = true }
fixed = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hydra-dx-math = { workspace = true }
log = { workspace = true }
orml-traits = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
typenum = { workspace = true }
zeitgeist-primitives = { workspace = true }
zrml-market-commons = { workspace = true }

# Mock

env_logger = { workspace = true, optional = true }
orml-asset-registry = { workspace = true, optional = true }
orml-currencies = { workspace = true, optional = true }
orml-tokens = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-insecure-randomness-collective-flip = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
pallet-treasury = { workspace = true, optional = true }
pallet-xcm = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sp-api = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
xcm = { workspace = true, optional = true }
xcm-builder = { workspace = true, optional = true }
zrml-authorized = { workspace = true, optional = true }
zrml-court = { workspace = true, optional = true }
zrml-global-disputes = { workspace = true, optional = true }
zrml-prediction-markets = { workspace = true, optional = true }
zrml-prediction-markets-runtime-api = { workspace = true, optional = true }

[dev-dependencies]
more-asserts = { workspace = true }
test-case = { workspace = true }
zrml-neo-swaps = { workspace = true, features = ["mock"] }

[features]
default = ["std"]
mock = [
    "orml-currencies/default",
    "orml-tokens/default",
    "pallet-balances",
    "pallet-insecure-randomness-collective-flip/default",
    "pallet-timestamp/default",
    "pallet-treasury/default",
    "sp-api/default",
    "sp-io/default",
    "zeitgeist-primitives/mock",
    "zrml-prediction-markets-runtime-api/default",
    "xcm/default",
    "orml-asset-registry/default",
    "orml-currencies/default",
    "orml-tokens/default",
    "pallet-balances/default",
    "pallet-timestamp/default",
    "sp-api/default",
    "sp-io/default",
    "zrml-court/std",
    "zrml-authorized/std",
    "zrml-global-disputes/std",
    "zrml-prediction-markets/std",
    "zrml-prediction-markets/mock",
    "zrml-prediction-markets/default",
    "serde/default",
    "env_logger/default",
]
parachain = ["zrml-prediction-markets/parachain"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "xcm-builder/std",
    "pallet-xcm/std",
    "zeitgeist-primitives/std",
    "zrml-market-commons/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition.workspace = true
name = "zrml-neo-swaps"
version = "0.5.3"
