[package]
name = "zrml-one-way-channels"
version = "0.1.0"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
version = '2.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0'

[dependencies.pallet-balances]
default-features = false
version = '2.0.0'

[dependencies.sp-core]
default-features = false
version = '2.0.0'

[dependencies.sp-io]
default-features = false
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[dev-dependencies]

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'pallet-balances/std',
]
