
[dependencies]
frame-benchmarking = { branch = "polkadot-v0.9.23", default-features = false, optional = true, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
orml-traits = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
parity-scale-codec = { default-features = false, features = [
    "derive",
    "max-encoded-len",
], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }

# Mock
orml-tokens = { branch = "polkadot-v0.9.23", git = "https://github.com/open-web3-stack/open-runtime-module-library", optional = true }
pallet-balances = { branch = "polkadot-v0.9.23", git = "https://github.com/paritytech/substrate", optional = true }
sp-io = { branch = "polkadot-v0.9.23", git = "https://github.com/paritytech/substrate", optional = true }

[dev-dependencies]
zrml-orderbook-v1 = { features = ["mock"], path = "." }

[features]
default = ["std"]
mock = [
    "orml-tokens",
    "pallet-balances",
    "sp-io",
    "zeitgeist-primitives/mock",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-orderbook-v1"
version = "0.3.6"
