
[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
orml-traits = { workspace = true }
parity-scale-codec = 
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
zeitgeist-primitives = { workspace = true }

# Mock
orml-tokens = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }

[dev-dependencies]
zrml-orderbook-v1 = { workspace = true, features = ["mock"] }

[features]
default = ["std"]
mock = [
    "orml-tokens",
    "pallet-balances",
    "sp-io",
    "zeitgeist-primitives/mock",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-orderbook-v1"
version = "0.3.10"
