[package]
name = "order-book-v2"
version = "0.1.0"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[dependencies]
zrml-traits = { path = "../traits", version = "0.1.0", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
version = '2.0.0-rc6'

[dependencies.frame-system]
default-features = false
version = '2.0.0-rc6'

[dependencies.pallet-balances]
default-features = false
version = '2.0.0-rc6'

[dependencies.sp-core]
default-features = false
version = '2.0.0-rc6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-rc6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc6'

[dependencies.sp-std]
default-features = false
version = '2.0.0-rc6'

[dev-dependencies]

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-rc6'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0-rc6'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc6'

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-balances/std',
]
